# NOTICE

./: .env.example  Anchor.toml  Cargo.toml  README.md  neural_network.cpp  neural_network.h  package-lock.json  package.json  tsconfig.json
programs/pqf5700/: Cargo.toml
programs/pqf5700/src/: lib.rs
scripts/: deploy-mint.ts  mint-metadata.ts  setup-anchor.sh  shared.ts  transfer.ts
