[workspace]
members = [
  "programs/pqf5700",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
solana-program = "1.18.26"
bytemuck = { version = "1.14", features = ["derive"] }
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
